# phyx-script

./: Cargo.toml  README.md  ball.phyx
examples/: balls.phyx  expressions.phyx  test.phyx  test2.phyx  test3.phyx
examples/advanced/: combine.phyx  falling_block.phyx  rings.phyx  rotating_ball.phyx
examples/simple/: ball.phyx  dist_to_center.phyx  grow.phyx  hit.phyx  hit_note.phyx  trail.phyx  update.phyx  x_to_hue.phyx
src/: main.rs
src/elements/: element.rs
src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs
src/interpreter/: lexer.rs  mod.rs
src/runtime/: colors.rs  environment.rs  interpreter.rs  mod.rs  native_fns.rs  values.rs
src/runtime/eval/: elements.rs  expressions.rs  mod.rs  objects.rs  statements.rs
src/simulation/: audio.rs  element.rs  mod.rs  model.rs  object.rs  physics.rs  simulation.rs
