[package]
name = "phyx-script"
version = "0.1.0"
edition = "2021"

[dependencies]
audrey = "0.3.0"
crossbeam = "0.8.4"
hsv = "0.1.1"
nalgebra = "0.33.0"
nannou = "0.19.0"
nannou_audio = "0.19.0"
palette = "0.7.6"
phf = { version = "0.11.2", features = ["macros"] }
png = "0.17.13"
rand = "0.8.5"
rapier2d = "0.21.0"
